added waiting animation

--- a/templates/result.html
+++ b/templates/result.html
@@ -9,6 +9,7 @@
     <h1>Nevus analyzer</h1>
     <img src="{{img}}" style="height: 50vh;">
     <h3>
+        <img src="static/wait_animation.gif" style="height: 50vh;">
         {% if result is string %}
             {{ result }}
         {% else %}
